--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,116 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-y: hidden;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.parallax-container {
+  position: relative;
+  overflow: hidden;
+  height: 50vh; /* Chiều cao của container bằng 50% chiều cao màn hình */
+}
+
+.parallax-background {
+  background-color: #f6c90e;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(-50%);
+  z-index: -1;
+}
+
+.parallax-content {
+  position: relative;
+  z-index: 1;
+  padding: 20px;
+  /* Thêm các kiểu dáng khác cho nội dung của bạn */
+}
+.container {
+  max-width: 768px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+}
+.iconNike {
+  width: 36px;
+  height: 28px;
+}
+
+.App_mainContent_12BYb {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  flex-wrap: wrap;
+  padding: 0 20px;
+  max-width: 760px;
+  margin: 0 auto;
+}
+
+.App_mainContent_12BYb:before {
+  content: "";
+  display: block;
+  position: fixed;
+  width: 300%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  border-radius: 100%;
+  transform: translateX(-50%) skewY(-8deg);
+  background-color: #f6c90e;
+  z-index: 1;
+  -webkit-animation: App_wave_3CtRm 8s ease-in-out infinite alternate;
+  animation: App_wave_3CtRm 8s ease-in-out infinite alternate;
+}
+@-webkit-keyframes App_wave_3CtRm {
+  0% {
+    transform: translateX(-50%) skew(0deg, -8deg);
+  }
+
+  to {
+    transform: translateX(-30%) skew(8deg, -4deg);
+  }
+}
+
+@keyframes App_wave_3CtRm {
+  0% {
+    transform: translateX(-50%) skew(0deg, -8deg);
+  }
+
+  to {
+    transform: translateX(-30%) skew(8deg, -4deg);
+  }
+}
+.a {
+  z-index: 10000;
+}
+@media only screen and (max-width: 480px) {
+  body {
+    overflow-y: auto;
+  }
+  .wrapImg {
+    width: 95px;
+  }
+  .wrapImgG {
+    width: 95px;
+    height: 95px;
+  }
+  .imgG {
+    width: 40px;
+    height: 150px;
+    margin-left: -30px;
+  }
 }
